--- a/练习/1203/ajaxNodeServer/views/add.html
+++ b/练习/1203/ajaxNodeServer/views/add.html
@@ -110,7 +110,7 @@ $(function(){
                 $('#modelId').modal();
                 if(res.code == 200){
                     setTimeout(() => {
-                        location.href = './index.html';
+                        location.href = './index08.html';
                     }, 3000);
                 }
             }
