--- a/练习/1204/ajaxNodeServer/views/register04(模板).html
+++ b/练习/1204/ajaxNodeServer/views/register04(模板).html
@@ -170,5 +170,22 @@
             "\n" +
             k
         );
+
+        //立即注册 用来判断是否有空
+        $('.submit ').on('click',function(){
+
+        })
+        //验证密码强度
+        $('.password').on('blur',function(){
+
+        })
+        //验证是否相同
+        $('.repass').on('blur',function(){
+
+        })
+        //短信验证码验证
+        $('.verify').on('blur',function(){
+            
+        })
  </script>
 </html>
