--- a/练习/1204/ajaxNodeServer/views/index08.html
+++ b/练习/1204/ajaxNodeServer/views/index08.html
@@ -162,8 +162,8 @@
    let delBtn = null;
 $('#btn-sure').on('click',function(){
   if(operation ==='登录'){
-    console.log(123);
-    //location.href = './login.html';
+    
+    location.href = './login.html';
   }else if(operation === '删除'){
     console.log(456);
     let id =delBtn.attr('data-id');
